--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,8 @@
     "dev": "nodemon app.js",
     "lint": "npx eslint ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bevuxyna/express-mesto-gha.git"
-  },
-  "author": "Vlada Melnikova",
+  "author": "FGeorg",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bevuxyna/express-mesto-gha/issues"
-  },
-  "homepage": "https://github.com/bevuxyna/express-mesto-gha#readme",
   "devDependencies": {
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -31,6 +23,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "validator": "^13.7.0",
